fix collapse line ie

--- a/less/ui/accordions.less
+++ b/less/ui/accordions.less
@@ -19,6 +19,7 @@
 
 .panel-group .panel-title > a,
 .panel-group .panel-title > a:hover,
+.panel-group .panel-title > a:focus,
 .panel-group .panel-heading + .panel-collapse > .list-group {
 	color: @palette-accent;
 	border: none;
@@ -30,8 +31,7 @@
 	border: 0;
 }
 .panel-group .panel-title > a:hover,
-.panel-group .panel-title > a.collapsed:hover,
-.panel-group .panel-title > a.collapsed:focus {
+.panel-group .panel-title > a.collapsed:hover {
 	text-decoration: none;
 
 	color: @palette-accent;
